Fixed running gpu process with kOverrideUseGLWithOSMesaForTests.

On windows with no graphics card gpu process was not started because
GpuDataManager was considered that there is no gpu and all gpu features
are blacklisted. Make kOverrideUseGLWithOSMesaForTests equal to kUseGL
when check gpu info.

BUG=621316

Review-Url: https://codereview.chromium.org/2087283003
Cr-Commit-Position: refs/heads/master@{#402412}

Former-commit-id: 98e5974f32d724c56b27eea7c3ea97599f6ab7e7